<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_cat_google_now_provider">
        <ListPreference
            android:entries="@array/softwares_names"
            android:entryValues="@array/softwares_names"
            android:key="@string/pref_google_now_key"
            android:summary="@string/pref_google_now_summary"
            android:title="@string/pref_google_now_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_search_provider">
        <ListPreference
            android:entries="@array/softwares_names"
            android:entryValues="@array/softwares_names"
            android:key="@string/pref_provider_key"
            android:summary="@string/pref_provider_summary"
            android:title="@string/pref_provider_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_appearance">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_icon_key"
            android:summaryOff="@string/pref_icon_summary_off"
            android:summaryOn="@string/pref_icon_summary_on"
            android:title="@string/pref_icon_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_app_name"
            android:summaryOff="@string/pref_name_summary_off"
            android:summaryOn="@string/pref_name_summary_on"
            android:title="@string/pref_name_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_extended_body"
            android:summaryOff="@string/pref_extended_body_summary_off"
            android:summaryOn="@string/pref_extended_body_summary_on"
            android:title="@string/pref_extended_body_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_short_title"
            android:summaryOff="@string/pref_short_title_summary_off"
            android:summaryOn="@string/pref_short_title_summary_on"
            android:title="@string/pref_short_title_title" />
    </PreferenceCategory>
</PreferenceScreen>